tests/error05.out
tests/error05.stl:2:23-2:24: error:
    Covariant variable 'a' must not be used in contravariant positions.