tests/error05.stl

type Foo (a : Type) = a -> Unit
